# cosmic-cpufreq

./: .gitignore  Cargo.toml  README.md  justfile
data/: cpufreqctl  dev.skylar.cosmic-ext-applet-cpufreq.desktop  dev.skylar.cosmic-ext-applet-cpufreq.policy
i18n/en/: cosmic_ext_applet_cpufreq.ftl
src/: applet.rs  config.rs  cpu.rs  i18n.rs  main.rs
