[package]
name = "cosmic-ext-applet-cpufreq"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[profile.release]
lto = "fat"

[dependencies]
i18n-embed = { version = "0.16.0", default-features = false, features = [
  "rust-embed",
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = { version = "0.10.0", default-features = false }
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
	"applet",
] }
rust-embed = { version = "8.11.0", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
	"ansi",
	"env-filter",
] }
